# 005_NDK_Compile

./: README.md
app/: build.gradle
app/src/androidTest/java/kim/hsl/compile/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  CMakeLists.txt  native-lib.c
app/src/main/java/kim/hsl/compile/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/kim/hsl/compile/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
